@@ -2,7 +2,7 @@ package com.security.service.impl;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.security.dto.LogInInput;
-import com.security.controller.UserDto;
+import com.security.dto.UserDto;
 import com.security.dto.UserInput;
 import com.security.entity.User;
 import com.security.exception.UserNotFound;
@@ -12,7 +12,6 @@ import com.security.utils.Utils;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class UserImpl implements UserService {
@@ -35,7 +34,7 @@ public class UserImpl implements UserService {
 
     @Override
     public List<UserDto> findAll() {
-        return userRepo.findAll().stream().map(this::convertEntityToDto).collect(Collectors.toList());
+        return userRepo.findAll().stream().map(this::convertEntityToDto).toList();
     }
 
     @Override
